--- a/app/views/icm/incident_journals/edit_close.html.erb
+++ b/app/views/icm/incident_journals/edit_close.html.erb
@@ -55,7 +55,6 @@
 </style>
 <%= page_title %>
 <%= form_for(@incident_request,:url=>{:action=>"update_close"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
-  <%=f.hidden_field :incident_status_code,:value=>incident_close_code %>
 <div id="reply" class="bEditBlock bPageBlock">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -77,7 +76,7 @@
             <tr>
               <td class="labelCol"><label for="incident_request_close_reason_code"><%=t(:label_icm_incident_request_close_reason_code)%></label></td>
               <td class="dataCol">
-                <%=f.select :close_reason_code,options_for_select(available_close_code,@incident_request.close_reason_code),
+                <%=f.select :close_reason_id,options_for_select(available_close_code,@incident_request.close_reason_id),
                                                     {},{:required=>true,:id=>"incident_request_close_reason_code"}%>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td></tr>
