--- a/app/views/icm/incident_requests/_new_form.html.erb
+++ b/app/views/icm/incident_requests/_new_form.html.erb
@@ -82,8 +82,7 @@
                                              :depend=>"ass_external_system,incident_request_requested_by",
                                              :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---",
                                              :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_slm_services",:format=>"json",
-                                                            :external_system_code=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}"),
-                                             :required => true}%>
+                                                            :external_system_code=>"{ass_external_system}", :requested_by => "{incident_request_requested_by}")}%>
               </td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
@@ -146,12 +145,12 @@
             <tr>
               <td class="labelCol"><label for="incident_request_urgence_code"><%=t(:label_icm_incident_request_urgence_code)%></label></td>
               <td class="dataCol">
-                <%=f.select :urgence_code,options_for_select(available_urgence_code,@incident_request.urgence_code),
+                <%=f.select :urgence_id,options_for_select(available_urgence_code,@incident_request.urgence_id),
                                                     {},{:required=>true,:id=>"incident_request_urgence_code"}%>
               </td>
               <td class="labelCol"><label for="incident_request_impact_range_code"><%=t(:label_icm_incident_request_impact_range_code)%></label></td>
               <td class="dataCol">
-                <%=f.select :impact_range_code,options_for_select(available_impact_range,@incident_request.impact_range_code),
+                <%=f.select :impact_range_id,options_for_select(available_impact_range,@incident_request.impact_range_id),
                                                     {},{:required=>true,:id=>"incident_request_impact_range_code"}%>
               </td>
             </tr>
@@ -182,7 +181,7 @@
               </td>
               <td class="labelCol"><label for="incident_request_incident_status_code"><%=t(:label_icm_incident_request_incident_status_code)%></label></td>
               <td class="dataCol">
-                <%=f.select :incident_status_code,options_for_select(available_request_status_code,@incident_request.incident_status_code),
+                <%=f.select :incident_status_id,options_for_select(available_request_status_code,@incident_request.incident_status_id),
                                                     {},{:required=>true,:id=>"incident_request_incident_status_code"}%>
               </td>
             </tr>
