--- a/app/views/layouts/uid.html.erb
+++ b/app/views/layouts/uid.html.erb
@@ -92,7 +92,7 @@
                             <div id="tabNavigation" class="tabNavigation">
                                 <div class="tabBarLeft"></div>
                                 <table id="tabBar" class="tab" cellpadding="0" cellspacing="0">
-                                    <%= level_two_menu %>
+                                    <%= render_tabs %>
                                 </table>
                                 <div class="tabBarRight"></div>
                             </div>
