公告编辑页面附件js

--- a/app/views/irm/support_groups/_new_form.html.erb
+++ b/app/views/irm/support_groups/_new_form.html.erb
@@ -59,8 +59,9 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_support_group_vendor_group)%></label></td>
               <td class="dataCol"><%=f.check_box :vendor_group_flag%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol"><label><%=t(:label_icm_rule_setting_assignment_process_code)%></label></td>
+              <td class="dataCol"><%=f.blank_select :assignment_process_code,available_processes,
+                                                    {},{:required=>true}%></td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_support_group_description)%></label></td>
