--- a/app/views/irm/support_groups/index.html.erb
+++ b/app/views/irm/support_groups/index.html.erb
@@ -37,7 +37,8 @@
                    {:key=>"organization_name",:label=>t(:label_irm_support_group_organization_name),:sortable=>true,:searchable=>true,:width=>"30px"},
                    {:key=>"support_role_name",:label=>t(:label_irm_support_group_support_role),:sortable=>true,:width=>"30px"},
                    {:key=>"vendor_group_flag",:label=>t(:label_irm_support_group_vendor_group),:formatter=>"Y.irm.template",:sortable=>true, :width=>"30px"},
-                   {:key=>"oncall_group_flag",:label=>t(:label_irm_support_group_oncall_group),:formatter=>"Y.irm.template",:sortable=>true, :width=>"30px"}],
+                   {:key=>"oncall_group_flag",:label=>t(:label_irm_support_group_oncall_group),:formatter=>"Y.irm.template",:sortable=>true, :width=>"30px"},
+                   {:key=>"assignment_process",:label=>t(:label_icm_rule_setting_assignment_process_code), :width=>"30px"}],
                    {:paginator_box=>"supportgroupPaginator",:search_box=>"permissionsSearchBox"})%>
         <div id="supportgroupPaginator"></div>
       </div>
