--- a/app/views/irm/support_groups/_edit_form.html.erb
+++ b/app/views/irm/support_groups/_edit_form.html.erb
@@ -60,8 +60,8 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_support_group_description)%></label></td>
               <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol"><label><%=t(:label_icm_rule_setting_assignment_process_code)%></label></td>
+              <td class="dataCol"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
             </tr>
         </tbody>
       </table>
