在事故单，报表的查询表格中使用excel导出表格数据功能

--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -65,7 +65,7 @@
                    {:key=>"editable_flag",:hidden=>true},
                    {:key=>"report_trigger_id",:hidden=>true},
                    {:key=>"description",:label=>t(:label_irm_report_description)}].compact,
-                   {:search_box=>"reportListSearchBox",:paginator_box=>"regionPaginator"})%>
+                   {:search_box=>"reportListSearchBox",:paginator_box=>"regionPaginator",:export_data=>true})%>
         <div id="regionPaginator"></div>
       </div>
     </div>
