添加表格数据导出为excel的功能

--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -23,6 +23,6 @@
                                { :key => "need_customer_reply",:hidden=>true },
                                { :key => "requested_name", :label => t(:label_icm_incident_request_requested_by,:searchable=>true) },
                                { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" }
-                               ],{:export_data=>true,:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox'})%>
+                               ],{:export_data=>"#incidentRequestExport",:not_load=>true,:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox'})%>
         <div id="incidentRequestsPaginatorBox"></div>
 </div>
