--- a/app/views/icm/incident_requests/index.html.erb
+++ b/app/views/icm/incident_requests/index.html.erb
@@ -18,6 +18,7 @@
                   <td id="topButtonRow" class="pbButton">
                     <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
                     <div class="button"><%= link_to t(:label_action_assign_dashboard), {:action => "assign_dashboard"}%></div>
+                    <div class="button" id="incidentRequestExport"><a href="javascript:void(0)"><%= t(:export) %></a></div>
                   </td>
                   <td class="pbHelp">
                     <div id="incident_requestsSearchBox"></div>
