支持组加入层级关系， 增加一个parent_group_id的字段到支持组，可选父支持组。 要检验不可以选择自己的自支持组为父支持组。

--- a/app/views/irm/support_groups/_new_form.html.erb
+++ b/app/views/irm/support_groups/_new_form.html.erb
@@ -69,6 +69,12 @@
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_support_group_parent)%></label></td>
+              <td class="dataCol"><%=f.blank_select :parent_group_id, available_parent_support_groups, {}%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
         </tbody>
       </table>
     </div>
