--- a/app/views/irm/support_groups/_edit_form.html.erb
+++ b/app/views/irm/support_groups/_edit_form.html.erb
@@ -63,6 +63,12 @@
               <td class="labelCol"><label><%=t(:label_icm_rule_setting_assignment_process_code)%></label></td>
               <td class="dataCol"><%=f.select :assignment_process_code,available_processes,{},{:required=>true}%></td>
             </tr>
+            <tr>
+              <td class="labelCol"><label><%=(t :label_irm_support_group_parent)%></label></td>
+              <td class="dataCol"><%=f.blank_select :parent_group_id, available_parent_support_groups(@support_group.id), {}%></td>
+              <td class="labelCol"></td>
+              <td class="dataCol"></td>
+            </tr>
         </tbody>
       </table>
     </div>
