--- a/app/views/skm/columns/index.html.erb
+++ b/app/views/skm/columns/index.html.erb
@@ -61,6 +61,10 @@
                                           <td class="labelCol"><label><%=t(:description)%></label></td>
                                           <td class="data2Col" id="column_description"></td>
                                         </tr>
+                                        <tr>
+                                          <td class="labelCol"><label><%=t(:label_skm_column_access)%></label></td>
+                                          <td class="data2Col" id="column_access"></td>
+                                        </tr>
                                     </tbody>
                                   </table>
                                 </div>
@@ -92,6 +96,7 @@ Ext.onReady(function() {
             {name: 'sc_id',type: 'string'},
             {name: 'column_name',type: 'string'},
             {name: 'column_description',type: 'string'},
+            {name: 'column_accesses', type:'string'},
             {name: 'sc_code',type: 'string'}
         ]
     });
@@ -112,6 +117,8 @@ Ext.onReady(function() {
                 Ext.getDom("column_code").innerHTML = record.get("sc_code");
                 Ext.getDom("column_name").innerHTML = record.get("column_name");
                 Ext.getDom("column_description").innerHTML = record.get("column_description");
+                Ext.getDom("column_access").innerHTML = record.get("column_accesses");
+
                 Ext.getDom("edit_button").innerHTML = "<a href='/skm_columns/" + record.get("sc_id") + "/edit'><%= t :edit%></a>";
                 Ext.getDom("new_child_button").innerHTML = "<a href='/skm_columns/new?parent_column_id=" + record.get("sc_id") +"'><%= t :label_skm_column_new_child%></a>";
             }
