应用密码策略验证用户密码

--- a/app/views/irm/my_password/edit_password.html.erb
+++ b/app/views/irm/my_password/edit_password.html.erb
@@ -30,6 +30,30 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
+            <% if Irm::PasswordPolicy.expire?(Irm::Person.current.password_updated_at) %>
+              <tr>
+                <td class="labelCol"><label></label></td>
+                <td class="dataCol"><label style="color:red;"><%=t(:label_irm_psw_policy_expire)%></label></td>
+                <td class="labelCol empty">&nbsp;</td>
+                <td class="dataCol empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="labelCol"><label><%=(t :label_irm_psw_policy_expire_in)%></label></td>
+                <td class="dataCol"><%= Irm::PasswordPolicy.first.expire_in%></td>
+                <td class="labelCol empty">&nbsp;</td>
+                <td class="dataCol empty">&nbsp;</td>
+              </tr>
+               <tr>
+                <td class="labelCol"><label><%=(t :label_irm_psw_policy_last_upadated_at)%></label></td>
+                <td class="dataCol"><%= format_date(Irm::Person.current.password_updated_at)%></td>
+                <td class="labelCol empty">&nbsp;</td>
+                <td class="dataCol empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="labelCol"><label><%=(t :label_irm_psw_policy_requirement)%></label></td>
+                <td class="dataCol" width="82%" colspan="3"><%= Irm::PasswordPolicy.validate_message%></td>
+              </tr>
+            <% end %>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_identity_old_password)%></label></td>
               <td class="dataCol"><%=f.password_field :old_password, :size=>40,:required=>true%></td>
