前台知识库首页，知识库文章列表，根据当前用户可访问的分类来过滤。无分类的文章则不过滤。

--- a/app/views/skm/columns/edit.html.erb
+++ b/app/views/skm/columns/edit.html.erb
@@ -97,7 +97,7 @@
                   </tr>
                   <tr class="duelList">
                     <td class="sourceCell">
-                      <%= select_tag_alias(:source,ava_bulletin_accesses,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
+                      <%= select_tag_alias(:source,ava_skm_column_accesses,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
                     </td>
                     <td class="buttonCell">
                       <div class="text"><%= t(:add) %></div>
