--- a/app/views/skm/columns/new.html.erb
+++ b/app/views/skm/columns/new.html.erb
@@ -97,7 +97,7 @@
                   </tr>
                   <tr class="duelList">
                     <td class="sourceCell">
-                      <%= select_tag_alias(:source,ava_bulletin_accesses,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
+                      <%= select_tag_alias(:source,ava_skm_column_accesses,nil,{:id=>"source",:multiple=>true,:size=>14}) %>
                     </td>
                     <td class="buttonCell">
                       <div class="text"><%= t(:add) %></div>
