--- a/app/views/irm/people/show.html.erb
+++ b/app/views/irm/people/show.html.erb
@@ -207,7 +207,7 @@
                 <h3 id="id_person_company_access_title"><%=t(:label_irm_person_company_access)%></h3>
               </td>
               <td class="pbButton">
-                <div class="button"><%= link_to t(:edit), "#",
+                <div class="button"><%= link_to t(:label_irm_person_add_to_company), "#",
                                                 :onclick=>"navigateToUrl('#{url_for(:controller=>"irm/company_accesses",
                                                           :action => "new",:person_id=>@person.id)}');"%></div>
               </td>
@@ -219,18 +219,56 @@
         </div>
         <div id="id_company_access" class="pbBody">
           <div id="person" class="datatable" style="width:100%;">
-            <div id="company_access_flag" style="display:none">
-              <%= check_img("{company_access_flag}") %>
-            </div>
-            <div id="support_stuff_flag" style="display:none">
-              <%= check_img("{support_stuff_flag}") %>
-            </div>
           </div>          
           <!-- Begin company access table -->
             <%= datatable("person",url_for(:controller=>"irm/company_accesses",:action=>"get_data",:person_id=>@person.id),
-                              [{:key=>"company_name",:label=>t(:label_irm_person_company),:sortable=>true},
-                               {:key=>"company_access_flag",:label=>t(:label_irm_person_company_access_flag),:formatter=>"Y.irm.template",:sortable=>true},
-                               {:key=>"support_stuff_flag",:hidden=>true,:label=>t(:label_irm_person_support_stuff_flag),:formatter=>"Y.irm.template",:sortable=>true}])%>
+                              [{:key=>"company_name",:label=>t(:label_irm_person_company),:sortable=>true}])%>
+          <!-- End company access table -->
+        </div>
+        <div class="pbFooter secondaryPalette">
+        <div class="bg"></div>
+        </div>
+      </div>
+    </div>
+</div>
+
+<div id="id_person_system_access" class="bRelatedList">
+    <a name="id_person_system_access_target">
+    </a>
+    <div class="listRelatedObject taskBlock">
+      <div class="bPageBlock secondaryPalette">
+        <div class="pbHeader">
+          <table cellspacing="0" cellpadding="0" border="0">
+            <tbody>
+            <tr>
+              <td class="pbTitle">
+                <h3 id="id_person_system_access_title"><%=t(:label_irm_person_access_system)%></h3>
+              </td>
+              <td class="pbButton">
+                <div class="button"><%= link_to t(:label_irm_person_add_to_system), "#",
+                                                :onclick=>"navigateToUrl('#{url_for(:controller=>"uid/external_system_members",
+                                                          :action => "new_from_person",:person_id=>@person.id)}');"%></div>
+              </td>
+              <td class="pbHelp">
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <div id="id_system_access" class="pbBody">
+          <div id="person_system_list" class="datatable" style="width:100%;">
+            <div id="id" style="display:none">
+              <%= link_to t(:remove), {:controller=>"uid/external_system_members",:action=>"delete_from_person",:external_system_code=>"{external_system_code}",
+                                      :person_id=>@person.id},:confirm => t(:label_are_you_sure) ,
+                                      :method => :delete %>
+            </div>
+          </div>
+          <!-- Begin company access table -->
+            <%= datatable("person_system_list",url_for(:controller=>"irm/people",:action=>"get_owned_external_systems", :person_id => @person.id),
+                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
+                               {:key=>"system_name",:label=>t(:label_uid_external_system),:sortable=>true, :width=>"200px"},
+                               {:key=>"system_description",:label=>t(:description),:sortable=>true, :width=> "400px"},
+                               {:key=>"external_system_code", :hidden => true}])%>
           <!-- End company access table -->
         </div>
         <div class="pbFooter secondaryPalette">
@@ -274,9 +312,8 @@
           <!-- Begin company access table -->
             <%= datatable("support_group",url_for(:controller=>"irm/people",:action=>"get_support_group",:person_id=>@person.id),
                               [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"40px"},
-                               {:key=>"support_group_name",:label=>t(:label_irm_support_group_name),:sortable=>true},
-                               {:key=>"description",:label=>t(:label_irm_support_group_description),:sortable=>true},
-                               {:key=>"status_meaning",:label=>t(:label_irm_support_group_status_code),:sortable=>true,:width=>"80px"}])%>
+                               {:key=>"support_group_name",:label=>t(:label_irm_support_group_name),:sortable=>true, :width=>"200px"},
+                               {:key=>"description",:label=>t(:label_irm_support_group_description),:sortable=>true, :width=>"400px"}])%>
           <!-- End company access table -->
         </div>
         <div class="pbFooter secondaryPalette">
